syntax = "proto3";

message CollectedBadge {
    string studentID = 1;
    uint32 competenceID = 2;
    uint32 semester = 3;
    bytes giver = 4;
}