syntax = "proto3";

message GiveBadge {
    string studentID = 1;
    uint32 competenceID = 2;
    uint32 semester = 3;
    string giver = 4;
}

message ApproveActivity {
    string studentID = 1;
    uint32 activityID = 2;
    uint32 semester = 3;
    string approver = 4;
}